methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:20: error: Unmatched closing brace '}' ignored here
}
^