methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (c <- 1 to 6) {
    avance()
    if (estSurBiscuit) {
      recule()
      return true
    }
    recule(6)
    return false
  }
}

def vuBiscuit():Boolean = {
    while (!haveBaggle) {
      droite(); avance(); gauche()
    }
  }
}